--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -441,6 +441,7 @@
                                 <span th:if="${#lists.isEmpty(allBillingAddress)}">
                                     <div class="warning-text">There are no billing addresses.</div>
                                 </span>
+
                             </ul>
                         </div>
                     </div>
@@ -879,7 +880,15 @@
 
                                     <li class="d-flex flex-row align-items-center justify-content-start">
                                         <div class="cart_extra_total_title">Coupon</div>
-                                        <div class="cart_extra_total_value ml-auto">- ₺0.00</div>
+                                        <div th:if="${order.getCouponPrice() == 0}"
+                                             class="cart_extra_total_value ml-auto">
+                                            <div class="cart_extra_total_value ml-auto"> -₺0.00</div>
+                                        </div>
+                                        <div th:unless ="${order.getCouponPrice() == 0}"
+                                             class="cart_extra_total_value ml-auto">
+                                            <div class="cart_extra_total_value ml-auto">
+                                                <td th:text="${'-₺' + order.getCouponPrice() * -1}"></td></div>
+                                        </div>
                                     </li>
 
                                     <li class="d-flex flex-row align-items-center justify-content-start">
@@ -931,7 +940,7 @@
                                         <li class="shipping_option d-flex flex-row align-items-center justify-content-start">
                                             <label class="radio_container">
                                                 <input type="radio" id="cargo_radio_5" name="cargo_radio"
-                                                       class="payment_radio" value="PTT Kargo">
+                                                       class="payment_radio" value="PTT Cargo">
                                                 <span class="radio_mark"></span>
                                                 <span class="radio_text">PTT Cargo</span>
                                             </label>
@@ -1251,6 +1260,7 @@
             });
         })
     });
+
 
     function validation_check(arr) {
         for (var i = 0; i < arr.length; i++) {
