address pages fixes

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -52,7 +52,7 @@
 
         <section class="product_description_area">
             <div class="container">
-                <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+                <ul class="nav nav-tabs justify-content-center" id="siteTab">
                     <li class="nav-item">
                         <a class="nav-link active profile-navbar-text" data-url="/profile/information"
                            th:href="@{#information}">My Information</a>
